Changed image src to ./images/Main3_AH.jpg

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <td>
                 <img
                   class="rounded"
-                  src="images/Main3_AH.jpg"
+                  src="./images/Main3_AH.JPG"
                   alt="A picture of Andrew Horner"
                   style="max-width: 130%; height: auto"
                 />
